# python-audit

./: .gitignore  README.md  auditd.sqlite  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
scripts/: install-dev-tools.sh
src/: __init__.py  constants.py  db.py  log_parser.py  log_parsers.py  main.py  utils.py
src/logs/: auditd.log.1  auditd.log.2
src/models/: __init__.py  base.py  cwd.py  execve.py  message_resolver.py  path.py  proctitle.py  syscall.py  unknown.py
src/queries/: enums.py  queries.py  str_queries.py
