[tool.poetry]
name = "singularity-auditd"
version = "0.1.0"
description = ""
authors = ["PsychoRover <gtorrent12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.14"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
